2014-09-24    <theller@ctypes.org>

	* Fix the 'ValueError: __loader__ is None' exception when a PEP
	420 implicit namespace package is encountered.

	* Fixed: When running in a virtual environment, py2exe did
	not copy the tcl/tk files when 'import tkinter' is detected.

	* Ignore 'numpy.core._dotblas' when numpy.core is imported.

2014-09-18    <theller@ctypes.org>

	* py2exe/mf3.py (ModuleFinder.import_package): enumerate and
	import modules from all subpackages.

2014-09-11    <theller@ctypes.org>

	* py2exe/runtime.py Print a meaningful error message when the
	build fails because bundle_files is too low for certain packages.

2014-05-26    <theller@ctypes.org>

	* py2exe/runtime.py (Runtime.bootstrap_modules): Add ctypes to the
	modules needed for bootstrap; it is used by boot_common.

2014-05-12    <theller@ctypes.org>

	* Add missing DeactivateActCtx() call.  Change version number to
	0.9.2.1.

2014-05-09    <theller@ctypes.org>

	* Releasing py2exe for Python 3, version 0.9.2.0.